--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ decorator==5.0.7
 Django==2.2
 django-localflavor==3.1
 Flask==1.1.2
+gunicorn==20.1.0
 ipython==7.22.0
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
