--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ cffi==1.14.5
 click==7.1.2
 colorama==0.4.4
 decorator==5.0.7
+dj-database-url==0.5.0
 Django==2.2
+django-heroku==0.3.1
 django-localflavor==3.1
 Flask==1.1.2
 gunicorn==20.1.0
@@ -18,6 +20,7 @@ parso==0.8.2
 pickleshare==0.7.5
 Pillow==8.2.0
 prompt-toolkit==3.0.18
+psycopg2==2.9.3
 pycparser==2.20
 Pygments==2.8.1
 python-stdnum==1.16
@@ -27,3 +30,4 @@ sqlparse==0.4.1
 traitlets==5.0.5
 wcwidth==0.2.5
 Werkzeug==1.0.1
+whitenoise==5.3.0
